# smplivisor

./: README.md  pyproject.toml  scheduler.py  server.py
scripts/: db.sql
visor/: scheduler.py  types.py  utils.py
visor/app/: middleware.py  organization.py  resource_manage.py
visor/config/: __init__.py
visor/db/: __init__.py  queries.py  redis.py
visor/organization/: org.py  user.py
visor/resource_manager/: cluster.py  deployment.py
